--- a/src/index.html
+++ b/src/index.html
@@ -82,8 +82,8 @@
         <button type="submit" class="form_submit" id="btnValidate" value="Validate">VALIDATE</button>
         <br>
 
-        <div> <p  class="textFinal" type="text" id="textFinal" >
-        </p>
+        <div> <input class="textFinal" type="text" id="textFinal" >
+        </input>
         </div>
 
 
