Orden de archios y cambio de estilos

--- a/src/index.html
+++ b/src/index.html
@@ -3,91 +3,79 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Tarjeta de crédito válida</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Nabla&display=swap" rel="stylesheet">
+  <title>YouGlam</title>
+  <link rel="Icon" href= "img/vectorMakeup.png"/>
+  <link rel="stylesheet" href="./estilos/style.css" />
+  <link rel="stylesheet" href="./estilos/modal.css" />
+  <link rel="stylesheet" href="./estilos/responsive.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <script src="https://kit.fontawesome.com/5a33599dd6.js" crossorigin="anonymous"></script>
-  
-
+  <link
+    href="https://fonts.googleapis.com/css2?family=ABeeZee&family=Adamina&family=Bubblegum+Sans&family=Caveat+Brush&family=Fredoka&family=Gaegu:wght@700&family=Itim&family=Licorice&family=Luckiest+Guy&family=Margarine&family=Mochiy+Pop+P+One&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
 </head>
 
 <body>
-  <!--Ventana Emergente Formulario-->
-
-
-  <header>
-    <h1> !GO VALIDE!</h1>
-    <br>
-  </header>
-  <main>
-    <img src="img/k.png" alt="10px">
-
-    <h2> ¿Cómo saber si una tarjeta de crédito esta <b>activa</b>? <br>
-      ¿Cómo comprobar si una tarjeta de credito es válida? Con este verificador de <b> crédito online</b> </h2>
-
-
-    <button id="btn-abrir-modal">ABRIR</button>
-
-    <button type="button" name="btn-cerrar-modal">CERRAR</button>
-
-    <dialog id="modal">
-
-
-      <!---------Imagenes de la tarjeta------------>
-
-
-      <img class="card" src="img/tarje.png" alt="35px" width="45%">
-      <img class="card" src="img/visa.png" alt="15px" width="20%">
-
-      <!------------Datos del formulario-------->
-
-      <section class="form">
-        <form class="form" action="">
-
-          <label for="cardName"></label>
-          <input class="form_input" type="text" id="cardName" placeholder="Ingresa tú nombre" required="">
-          <br>
-          <label for="cardNumber"></label>
-          <br>
-          <input class="form_input" type="number" name="number" id="cardNumber" placeholder=" Número de tarjeta"
-            maxlength="16" required>
-          <br>
-          <div>
-
-            <label for="cardMonth"></label>
-
-            <div>
-              <br>
-              <input class="form_input" type="text" maxlength="2" name="cardMonth" id="cardMonth" placeholder="Mes">
-              <br>
-              <br>
-              <input class="form_input" type="text" maxlength="2" name="cardYear" id="CardYear" placeholder="Año">
-              <br>
-              <br>
-
-            </div>
-          </div>
-
-          <button type="submit" class="form_submit" id="btnValidate" value="Validate">VALIDAR</button>
-          <br>
-          <br>
-
-          <div class="oculta">
-            <label for="mascara" class="form_texto"></label>
-            <div disabled="true" class="form_texto" id="validar" style="font-size:15px"></div>
-          </div>
-
-            
-        </form>
-
-      </section>
+  <main class="container-main">
+    <h1 class="tittle-you">You</h1>
+    <h2 class="tittle-glam">Glam</h2>
   </main>
+  <section>
+    <p class="text-makeup"> Join us and sign up for our sel-makeup workshop. What will your learn? You will discover
+      how to look glamorous at all times, by learning the necessary techniques for a subtle and delicate
+      makeup that will highlight your best features. Do not miss the opportunity and take advantage of our
+      exclusive offer for the month of <span class="discount"> May 40% discount!</span>
+    </p>
+    <h4 class="text-reserve">Reserve your place here!</h4>
+
+    <button type="button" id="btn-abrir-modal"> <strong>Pay here</strong></button>
+  </section>
+  <img class="img-makeup" src="img/imgMakeup.png">
+  <div class="container-icon-red-social">
+    <h6 class="contact"> Contact </h6>
+    <img class="instagram" src="img/instagram.png">
+    <img class="facebook" src="img/facebook.png">
+    <img class="phone" src="img/phone.png">
+  </div>
+
+  <footer class="container-footer">
+    <p class="text-footer">
+      © 2023 Youglam
+    </p>
+  </footer>
+
+  <div class="modal-container">
+  <dialog id="modal">
+   
+    <form class="form-modal" action="">
+      <button id="btn-cerrar-modal" type="button">X</button>
+      <img class="card-credit" src="img/cardCredit.png">
+      <label class="card-name" for="cardName"> Card number</label>
+
+      <input class="form_input" type="text" name="number" id="cardNumber" placeholder="0000 0000 0000 0000"
+        maxlength="16" required>
+      <img class="icon-card" src="img/Icon.png">
+      <label class="card-expires"> Expires</label>
+      <input class="card-mouth" placeholder="MM" maxlength="2">
+      <input class="card-year" placeholder="YY" maxlength="2">
+      <label class="card-security"> Security code</label>
+      <input class="Security-code" maxlength="3" placeholder="CVC">
+      <img class="icon-security" src="img/security.png">
+      <label class="card-holder"> Cardholder name</label>
+      <input class="holder-name" placeholder="Amy Schumer">
+      <button type="submit" class="btn-submit" id="btnValidate" value="Validate">Submit</button>
+      <p class="txt-end">Your transaction is protected with SSL encryption
+        <img src="img/Vector.png">
+      </p>
+    </form>
+  
   </dialog>
+</div>
 
   <script src="index.js" type="module"></script>
 </body>
 
 </html>
+
