--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,13 @@
 
 <body>
   <section>
-    <div class="card">
+    <div class="card" >
       <h1 class="card__tittle"> Pet lover </h1>
       <p class="card__txt">
         <b>Help us save lives!❤️</b> Your donation supports our association in the protection and care of animals in
         need. Together we make a difference.
       </p>
-      <p class="card__txt  txt--color"> 10$ coupon <img src="./img/surprise.png"> </p>
+      <p class="card__txt  txt--color"> 10$ coupon <img src="./assets/surprise.png"> </p>
       <button type="button" class="card__button" id="btn-abrir-modal"> Donate</button>
     </div>
     </div>
