change img main

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Pet lover</title>
-  <link rel="icon" href="/assets/icon.png" />
+  <link rel="icon" href="./assets/icon.png" />
   <link rel="stylesheet" href="./css/main.css" />
   <link rel="stylesheet" href="./css/modal.css" />
   <link
@@ -22,7 +22,7 @@
         <b>Help us save lives!❤️</b> Your donation supports our association in the protection and care of animals in
         need. Together we make a difference.
       </p>
-      <p class="card__txt  txt--color"> 10$ coupon <img src="/assets/surprise.png"> </p>
+      <p class="card__txt  txt--color"> 10$ coupon <img src="./assets/surprise.png"> </p>
       <button type="button" class="card__button" id="btn-abrir-modal"> Donate</button>
     </div>
     </div>
