--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
 </head>
 
 <body>
+  <div>
+    <img class="img-extra" src="./assets/codioful.jpg" width="100%" height="100%">
+  </div>
   <section>
     <div class="card" >
       <h1 class="card__tittle"> Pet lover </h1>
